agregue al notebook los graficos que presentamos ayer en la presentacion y ademas otros pequeños cambios

--- a/TP1_Analisis_de_datos.ipynb
+++ b/TP1_Analisis_de_datos.ipynb
@@ -1441,6 +1441,44 @@
    "source": [
     "producto.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "958095bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2944411 entries, 0 to 2944410\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                                Dtype  \n",
+      "---  ------                                -----  \n",
+      " 0   id_bandera                            Int64  \n",
+      " 1   id_sucursal                           Int64  \n",
+      " 2   id_producto                           object \n",
+      " 3   productos_ean                         boolean\n",
+      " 4   productos_descripcion                 object \n",
+      " 5   productos_unidad_medida_presentacion  object \n",
+      " 6   productos_marca                       object \n",
+      " 7   productos_precio_lista                float32\n",
+      " 8   productos_precio_referencia           float32\n",
+      " 9   productos_cantidad_referencia         Int64  \n",
+      " 10  productos_unidad_medida_referencia    object \n",
+      " 11  productos_precio_unitario_promo1      float32\n",
+      " 12  productos_leyenda_promo1              object \n",
+      "dtypes: Int64(3), boolean(1), float32(3), object(6)\n",
+      "memory usage: 249.9+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(producto.info())"
+   ]
   }
  ],
  "metadata": {
