--- a/TP2.ipynb
+++ b/TP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "c62fbd64",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n"
    ]
   },
   {
@@ -1512,6 +1513,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4020c56b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_test_scaled.copy()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "512e4298",
    "metadata": {},
@@ -1532,8 +1543,7 @@
     "\n",
     "\n",
     "\n",
-    "- 3- Analizar el balance/desbalance de clases (en el caso que se trate de un problema de clasifi cación).\n",
-    "- 4- Proponer y aplicar mecanismos de balance en caso de ser necesario y justifi car la selección."
+    "\n"
    ]
   },
   {
@@ -1548,11 +1558,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7d307a30",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_bandera', 'productos_marca', 'productos_precio_lista'], dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e59ca5fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productos_precio_lista</th>\n",
+       "      <th>id_bandera_2.0</th>\n",
+       "      <th>id_bandera_3.0</th>\n",
+       "      <th>productos_marca_123 LISTO</th>\n",
+       "      <th>productos_marca_1882</th>\n",
+       "      <th>productos_marca_1888</th>\n",
+       "      <th>productos_marca_214 CARNE</th>\n",
+       "      <th>productos_marca_3D</th>\n",
+       "      <th>productos_marca_9 DE ORO</th>\n",
+       "      <th>productos_marca_ABSOLUT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>productos_marca_WYBOROWA</th>\n",
+       "      <th>productos_marca_YER-VITA</th>\n",
+       "      <th>productos_marca_YOGURADE</th>\n",
+       "      <th>productos_marca_YOGURISIMO</th>\n",
+       "      <th>productos_marca_YOVINESSA</th>\n",
+       "      <th>productos_marca_YUKA</th>\n",
+       "      <th>productos_marca_ZAFRAN</th>\n",
+       "      <th>productos_marca_ZONA LIBRE</th>\n",
+       "      <th>productos_marca_ZORRO</th>\n",
+       "      <th>productos_marca_ZORRO PLUS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>418174</th>\n",
+       "      <td>249000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2717676</th>\n",
+       "      <td>2319.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>978323</th>\n",
+       "      <td>5150.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1713271</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2257494</th>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 677 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         productos_precio_lista  id_bandera_2.0  id_bandera_3.0  \\\n",
+       "418174                 249000.0             0.0             0.0   \n",
+       "2717676                  2319.0             1.0             0.0   \n",
+       "978323                   5150.0             0.0             1.0   \n",
+       "1713271                  1000.0             1.0             0.0   \n",
+       "2257494                  1800.0             0.0             0.0   \n",
+       "\n",
+       "         productos_marca_123 LISTO  productos_marca_1882  \\\n",
+       "418174                         0.0                   0.0   \n",
+       "2717676                        0.0                   0.0   \n",
+       "978323                         0.0                   0.0   \n",
+       "1713271                        0.0                   0.0   \n",
+       "2257494                        0.0                   0.0   \n",
+       "\n",
+       "         productos_marca_1888  productos_marca_214 CARNE  productos_marca_3D  \\\n",
+       "418174                    0.0                        0.0                 0.0   \n",
+       "2717676                   0.0                        0.0                 0.0   \n",
+       "978323                    0.0                        0.0                 0.0   \n",
+       "1713271                   0.0                        0.0                 0.0   \n",
+       "2257494                   0.0                        0.0                 0.0   \n",
+       "\n",
+       "         productos_marca_9 DE ORO  productos_marca_ABSOLUT  ...  \\\n",
+       "418174                        0.0                      0.0  ...   \n",
+       "2717676                       0.0                      0.0  ...   \n",
+       "978323                        0.0                      0.0  ...   \n",
+       "1713271                       0.0                      0.0  ...   \n",
+       "2257494                       0.0                      0.0  ...   \n",
+       "\n",
+       "         productos_marca_WYBOROWA  productos_marca_YER-VITA  \\\n",
+       "418174                        0.0                       0.0   \n",
+       "2717676                       0.0                       0.0   \n",
+       "978323                        0.0                       0.0   \n",
+       "1713271                       0.0                       0.0   \n",
+       "2257494                       0.0                       0.0   \n",
+       "\n",
+       "         productos_marca_YOGURADE  productos_marca_YOGURISIMO  \\\n",
+       "418174                        0.0                         0.0   \n",
+       "2717676                       0.0                         0.0   \n",
+       "978323                        0.0                         0.0   \n",
+       "1713271                       0.0                         0.0   \n",
+       "2257494                       0.0                         0.0   \n",
+       "\n",
+       "         productos_marca_YOVINESSA  productos_marca_YUKA  \\\n",
+       "418174                         0.0                   0.0   \n",
+       "2717676                        0.0                   0.0   \n",
+       "978323                         0.0                   0.0   \n",
+       "1713271                        0.0                   0.0   \n",
+       "2257494                        0.0                   0.0   \n",
+       "\n",
+       "         productos_marca_ZAFRAN  productos_marca_ZONA LIBRE  \\\n",
+       "418174                      0.0                         0.0   \n",
+       "2717676                     0.0                         0.0   \n",
+       "978323                      0.0                         0.0   \n",
+       "1713271                     0.0                         0.0   \n",
+       "2257494                     0.0                         0.0   \n",
+       "\n",
+       "         productos_marca_ZORRO  productos_marca_ZORRO PLUS  \n",
+       "418174                     0.0                         0.0  \n",
+       "2717676                    0.0                         0.0  \n",
+       "978323                     0.0                         0.0  \n",
+       "1713271                    0.0                         0.0  \n",
+       "2257494                    0.0                         0.0  \n",
+       "\n",
+       "[5 rows x 677 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# --- 1. Crear e Instanciar el OneHotEncoder ---\n",
+    "# Columnas que queremos codificar\n",
+    "columnas_categoricas = ['id_bandera', 'productos_marca']\n",
+    "\n",
+    "# Creamos el encoder con parámetros importantes\n",
+    "ohe = OneHotEncoder(\n",
+    "    handle_unknown='ignore', # Ignora categorías en test que no estaban en train\n",
+    "    sparse_output=False,     # Devuelve un array de numpy denso (no una matriz dispersa)\n",
+    "    drop='first'             # Opcional, pero recomendado: elimina la primera categoría\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# --- 2. Aprender las categorías de X_train (el paso .fit()) ---\n",
+    "# Le pasamos solo las columnas categóricas de X_train\n",
+    "ohe.fit(X_train[columnas_categoricas])\n",
+    "\n",
+    "\n",
+    "# --- 3. Transformar los datos ---\n",
+    "# Aplicamos la transformación a X_train y X_test\n",
+    "# El resultado es un array de NumPy, no un DataFrame\n",
+    "X_train_ohe_array = ohe.transform(X_train[columnas_categoricas])\n",
+    "X_test_ohe_array = ohe.transform(X_test[columnas_categoricas])\n",
+    "\n",
+    "\n",
+    "# --- 4. (Opcional pero recomendado) Crear un DataFrame con las nuevas columnas ---\n",
+    "# Obtenemos los nombres de las nuevas columnas generadas\n",
+    "nuevas_columnas_nombres = ohe.get_feature_names_out(columnas_categoricas)\n",
+    "\n",
+    "# Convertimos los arrays a DataFrames con los nombres correctos\n",
+    "X_train_ohe_df = pd.DataFrame(X_train_ohe_array, index=X_train.index, columns=nuevas_columnas_nombres)\n",
+    "X_test_ohe_df = pd.DataFrame(X_test_ohe_array, index=X_test.index, columns=nuevas_columnas_nombres)\n",
+    "\n",
+    "\n",
+    "# --- 5. Unir las nuevas columnas con las originales (numéricas) ---\n",
+    "# Primero, quitamos las columnas categóricas originales de los dataframes\n",
+    "X_train_numerico = X_train.drop(columns=columnas_categoricas)\n",
+    "X_test_numerico = X_test.drop(columns=columnas_categoricas)\n",
+    "\n",
+    "# Luego, concatenamos las columnas numéricas con las nuevas columnas codificadas\n",
+    "X_train_final = pd.concat([X_train_numerico, X_train_ohe_df], axis=1)\n",
+    "X_test_final = pd.concat([X_test_numerico, X_test_ohe_df], axis=1)\n",
+    "\n",
+    "\n",
+    "X_test_final.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d76a8b",
+   "metadata": {},
+   "source": [
+    "### 2.3- Analizar el balance/desbalance de clases (en el caso que se trate de un problema de clasificación)\n",
+    "\n",
+    "Nuestro problema se trata de regresion asique este punto no aplica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b9b504f",
+   "metadata": {},
+   "source": [
+    "### 2.4- Proponer y aplicar mecanismos de balance en caso de ser necesario y justificar la selección.\n",
+    "\n",
+    "No aplica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e67c4dfb",
+   "metadata": {},
+   "source": [
+    "## 3 Reducción de dimensionalidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69f28db9",
+   "metadata": {},
+   "source": [
+    "### 3.1 Evaluar relaciones entre variables y realizar una selección de features con los mecanismos vistos en clase (ej: fi ltros)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bf347c4",
+   "metadata": {},
+   "source": [
+    "### 3.2 Implementar dos técnicas de extracción de features (ej: PCA). Comparar entre sí, y comparar el dataset original con el dataset reducido; evaluar ventajas y desventajas de la reducción."
+   ]
   }
  ],
  "metadata": {
